Fix #145: Use custom runtime image and set java dist to liberica. (#149)
* Fix #145: Use custom runtime image and set java dist to liberica. Remove call to private module.

* Upgrade setup java to v2.

* Use java-package jdk+fx

* Fix tests by adding jvm args for unamed modules.